; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_coalition.c_mem_asc_cmp.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_coalition.c_mem_asc_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coal_sort_s = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @mem_asc_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mem_asc_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.coal_sort_s*, align 8
  %6 = alloca %struct.coal_sort_s*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.coal_sort_s*
  store %struct.coal_sort_s* %8, %struct.coal_sort_s** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.coal_sort_s*
  store %struct.coal_sort_s* %10, %struct.coal_sort_s** %6, align 8
  %11 = load %struct.coal_sort_s*, %struct.coal_sort_s** %5, align 8
  %12 = getelementptr inbounds %struct.coal_sort_s, %struct.coal_sort_s* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.coal_sort_s*, %struct.coal_sort_s** %6, align 8
  %15 = getelementptr inbounds %struct.coal_sort_s, %struct.coal_sort_s* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = sub nsw i64 %13, %16
  %18 = trunc i64 %17 to i32
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
